# switching-sde-release

./: .gitignore  Makefile  README.md  RELEASE_CHECKLIST.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
assets/manifests/: artifacts.lock.json  datasets.lock.json  index_summary.json
scripts/: bootstrap_repo.sh  build_release_bundle.py  link_legacy_artifacts.py  migrate_from_legacy.py  release_preflight.py
src/switching_sde/: __init__.py
src/switching_sde_release.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: _legacy_path.py
tests/integration/: test_p5_live_or_frozen_auto.py  test_paper_full_frozen_pipeline.py  test_visualization_from_frozen_predictions.py
tests/regression/: test_legacy_metadata_alignment.py
tests/unit/: test_artifact_registry_schema.py  test_artifact_resolver_priority.py  test_config_schema.py  test_frozen_loader.py
writing-pipeline/: README.md  START_HERE.md  human_notes.md  run_config.yaml  workflow.md
writing-pipeline/artifacts/: README.md  evidence_map.yaml  figure_table_plan.md  final_readiness.md  paper_outline.md  paper_paragraph_plan.md  project_dossier.md  report_outline.md  report_paragraph_plan.md  report_review_log.md  review_comments.md  revision_decisions.md  subagent_workflow_run.md  terminology_map.md
writing-pipeline/outputs/: README.md  figure_manifest.md  paper.html  paper.zh.html  paper_sections.md  paper_sections.zh.md  report.html  report.md  report.zh.html  report.zh.md
writing-pipeline/rendering/: default_theme.css
writing-pipeline/roles/: advisor.md  (+16 more)
(+51 files in other folders)
